--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
   background-color: white;
   border-radius: 10px;
   width: 80%;
-  max-width: 600px;
+  max-width: 700px;
   margin-left: auto;
   margin-right: auto;
   box-shadow: 0px 0px 15px rgba(0,0,0,0.1);
@@ -28,3 +28,11 @@ button {
 
 .hidden {
   display: none;
+}
+
+.player-box {
+  background-color: #f9f9f9;
+  border: 1px solid #ddd;
+  margin: 10px;
+  padding: 10px;
+  border-radius: 6px;
